Testes Unitarios na Repository e nos adaptadores